--- a/.env.demo
+++ b/.env.demo
@@ -1,24 +1,62 @@
-BU_PHP_FOLDER=
-BU_PHP_FOLDER_DEV=
+BU_PHP_FOLDER=../2304bu
+# BU_PHP_FOLDER_DEV=../2304bu_dev
 
-BU_FRONT_FOLDER=
-BU_FRONT_FOLDER_DEV=
+BU_FRONT_FOLDER=../2304bu_nuxt3
+BU_FRONT_FOLDER_DEV=../2304bu_nuxt3_dev
 
-BU_FOLDER_DB=
+BU_FOLDER_DB=../bu72-db
 
-BU_DB_ROOT_PASSWORD=
-BU_DB_DATABASE=
-BU_DB_USERNAME=
-BU_DB_PASSWORD=
+BU_DB_ROOT_PASSWORD=pass123
+BU_DB_DATABASE=bu
+BU_DB_USERNAME=bu-user
+BU_DB_PASSWORD=123123
+192
+TTT72_FOLDER_DB=../ttt72_db
+
+MYSQL_DB_FOLDER=../mysql_db
+MYSQL_DB_ROOT_PASSWORD=asd6q5w1as321S
+
+TTT72_DB_DATABASE=ttt72
+TTT72_DB_ROOT_PASSWORD=pass123
+TTT72_DB_USERNAME=ttt_user
+TTT72_DB_PASSWORD=123123
+
+# TTT72_PHP_FOLDER=../site23072ttt72
+TTT72_PHP_FOLDER=../23072ttt72
+# TTT722_PHP_FOLDER=../23072ttt722
+TTT722_PHP_FOLDER=../2308temp
+
+xSITE2_PHP_FOLDER=../2308temp
+SITE2_PHP_FOLDER=../2308beget
+FOLDER_2308BEGET=../2308beget
+
+SYMTEST_FOLDER=../2308sym_test3/site
+
+BASE17_FOLDER=../2212-base17
+BASE17_DB_ROOT_PASSWORD=65asd1awe6574s
+BASE17_FOLDER_DB=../base17_db
+
+FOLDER_2309LARAWIRE=../2309livewire
+FOLDER_2309LIVEWIRE=../2309livewire
+xFOLDER_2309LIVEWIRE_SERV=/home/2309livewire
+FOLDER_2309LIVEWIRE_SERV=/2309livewire
+
+FOLDER_TEST231012=../test231012
+FOLDER_TEST231012_SERV=/test231012
+TEST231012_DOCKERFILE=docker.test231012.Dockerfile
+
+FOLDER_2311TEST=../2311test-for-candidates
+FOLDER_2311TEST_SERV=/2311test
 
 
-TTT72_FOLDER_DB=
+FOLDER_TEST23116PHP=../test231116phpToDoList
+FOLDER_TEST23116PHP_SERV=/test231116php
 
-TTT72_DB_DATABASE=
-TTT72_DB_ROOT_PASSWORD=
-TTT72_DB_USERNAME=
-TTT72_DB_PASSWORD=
+FOLDER_2311AR=../2311ar
+FOLDER_2311AR_SERV=/2311ar
 
-TTT72_PHP_FOLDER=
+FOLDER_ROSOWEB=../roso/web
+FOLDER_ROSOWEB_SERV=/drupal7
 
-SYMTEST_FOLDER=
+FOLDER_UPR_SERV=../upr_serv
+FOLDER_UPR_SERV_SERV=/home/upr_serv
