--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,20 +26,20 @@ services:
       - './caddy/certs:/data/caddy/locks/'
       - './caddy/certs3:/data/caddy/certificates/'
 
-      - '${FOLDER_2308BEGET}:/2308beget'
+#      - '${FOLDER_2308BEGET}:/2308beget'
 #      - '${FOLDER_2309LARAWIRE}:/2309livewire'
 #      - '${FOLDER_2309LIVEWIRE}:${FOLDER_2309LIVEWIRE_SERV}'
 #      - '${FOLDER_2309LARAWIRE}:${FOLDER_2309LIVEWIRE_SERV}'
-      - '${FOLDER_TEST231012}:${FOLDER_TEST231012_SERV}'
-      - '${FOLDER_2311TEST}:${FOLDER_2311TEST_SERV}'
-      - '${FOLDER_2309LIVEWIRE}:${FOLDER_2309LIVEWIRE_SERV}'
-      - '${FOLDER_TEST23116PHP}:${FOLDER_TEST23116PHP_SERV}'
+#      - '${FOLDER_TEST231012}:${FOLDER_TEST231012_SERV}'
+#      - '${FOLDER_2311TEST}:${FOLDER_2311TEST_SERV}'
+#      - '${FOLDER_2309LIVEWIRE}:${FOLDER_2309LIVEWIRE_SERV}'
+#      - '${FOLDER_TEST23116PHP}:${FOLDER_TEST23116PHP_SERV}'
 
     depends_on:
-      - 2308beget
-      - 2309livewire
+#      - 2308beget
+#      - 2309livewire
       - db_mysql
-      - test231116php
+#      - test231116php
     networks:
       - laravel
 
@@ -62,27 +62,27 @@ services:
 
 
 
-  2308beget:
-    container_name: 2308beget
-
-    build:
-      context: .
-      dockerfile: docker.2308beget.Dockerfile
-    working_dir: /2308beget
-    environment:
-      - PHPGROUP=www-data
-      - PHPUSER=www-data
-    restart: unless-stopped
-      # tty: true
-    expose:
-      - 9000
-    volumes:
-      - '${FOLDER_2308BEGET}:/2308beget'
-
-    networks:
-      - laravel
-    depends_on:
-      - db_mysql
+#  2308beget:
+#    container_name: 2308beget
+#
+#    build:
+#      context: .
+#      dockerfile: docker.2308beget.Dockerfile
+#    working_dir: /2308beget
+#    environment:
+#      - PHPGROUP=www-data
+#      - PHPUSER=www-data
+#    restart: unless-stopped
+#      # tty: true
+#    expose:
+#      - 9000
+#    volumes:
+#      - '${FOLDER_2308BEGET}:/2308beget'
+#
+#    networks:
+#      - laravel
+#    depends_on:
+#      - db_mysql
   #++
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -98,86 +98,86 @@ services:
     networks:
       - laravel
 
-  2309livewire:
-    container_name: 2309livewire
-    depends_on:
-      - db_mysql
-    networks:
-      - laravel
-    build:
-      context: .
-      dockerfile: docker.2309livewire.Dockerfile
-    working_dir: ${FOLDER_2309LIVEWIRE_SERV}
-    environment:
-      - PHPGROUP=www-data
-      - PHPUSER=www-data
-      - FOLDER=${FOLDER_2309LIVEWIRE_SERV}
-    restart: unless-stopped
-    # tty: true
-    expose:
-      - 9000
-    # links:
-    #   - db_mysql:db
-    volumes:
-      - '${FOLDER_2309LIVEWIRE}:${FOLDER_2309LIVEWIRE_SERV}'
+#  2309livewire:
+#    container_name: 2309livewire
+#    depends_on:
+#      - db_mysql
+#    networks:
+#      - laravel
+#    build:
+#      context: .
+#      dockerfile: docker.2309livewire.Dockerfile
+#    working_dir: ${FOLDER_2309LIVEWIRE_SERV}
+#    environment:
+#      - PHPGROUP=www-data
+#      - PHPUSER=www-data
+#      - FOLDER=${FOLDER_2309LIVEWIRE_SERV}
+#    restart: unless-stopped
+#    # tty: true
+#    expose:
+#      - 9000
+#    # links:
+#    #   - db_mysql:db
+#    volumes:
+#      - '${FOLDER_2309LIVEWIRE}:${FOLDER_2309LIVEWIRE_SERV}'
 
-  test231012:
-    container_name: test231012
-    depends_on:
-      - db_mysql
-    networks:
-      - laravel
-    build:
-      context: .
-      dockerfile: ${TEST231012_DOCKERFILE}
-    working_dir: ${FOLDER_TEST231012_SERV}
-    environment:
-      - PHPGROUP=www-data
-      - PHPUSER=www-data
-    restart: unless-stopped
-    expose:
-      - 9000
-    volumes:
-      - '${FOLDER_TEST231012}:${FOLDER_TEST231012_SERV}'
+#  test231012:
+#    container_name: test231012
+#    depends_on:
+#      - db_mysql
+#    networks:
+#      - laravel
+#    build:
+#      context: .
+#      dockerfile: ${TEST231012_DOCKERFILE}
+#    working_dir: ${FOLDER_TEST231012_SERV}
+#    environment:
+#      - PHPGROUP=www-data
+#      - PHPUSER=www-data
+#    restart: unless-stopped
+#    expose:
+#      - 9000
+#    volumes:
+#      - '${FOLDER_TEST231012}:${FOLDER_TEST231012_SERV}'
 
-  2311test:
-    container_name: 2311test
-    depends_on:
-      - db_mysql
-    networks:
-      - laravel
-    links:
-      - db_mysql:ss_db
-    build:
-      context: .
-      dockerfile: docker.2311test.Dockerfile
-    working_dir: ${FOLDER_2311TEST_SERV}
-    environment:
-      - PHPGROUP=www-data
-      - PHPUSER=www-data
-      - FOLDER=${FOLDER_2311TEST_SERV}
-    restart: unless-stopped
-    expose:
-      - 9000
-    volumes:
-      - '${FOLDER_2311TEST}:${FOLDER_2311TEST_SERV}'
+#  2311test:
+#    container_name: 2311test
+#    depends_on:
+#      - db_mysql
+#    networks:
+#      - laravel
+#    links:
+#      - db_mysql:ss_db
+#    build:
+#      context: .
+#      dockerfile: docker.2311test.Dockerfile
+#    working_dir: ${FOLDER_2311TEST_SERV}
+#    environment:
+#      - PHPGROUP=www-data
+#      - PHPUSER=www-data
+#      - FOLDER=${FOLDER_2311TEST_SERV}
+#    restart: unless-stopped
+#    expose:
+#      - 9000
+#    volumes:
+#      - '${FOLDER_2311TEST}:${FOLDER_2311TEST_SERV}'
 
-  test231116php:
-    container_name: test231116php
-    #    depends_on:
-    #      - db_mysql
-    networks:
-      - laravel
-    build:
-      context: .
-      dockerfile: docker.test231116php.Dockerfile
-    working_dir: ${FOLDER_TEST23116PHP_SERV}
-    environment:
-      - PHPGROUP=www-data
-      - PHPUSER=www-data
-      - FOLDER=${FOLDER_TEST23116PHP_SERV}
-    restart: unless-stopped
-    expose:
-      - 9000
-    volumes:
-      - '${FOLDER_TEST23116PHP}:${FOLDER_TEST23116PHP_SERV}'
+#  test231116php:
+#    container_name: test231116php
+#    #    depends_on:
+#    #      - db_mysql
+#    networks:
+#      - laravel
+#    build:
+#      context: .
+#      dockerfile: docker.test231116php.Dockerfile
+#    working_dir: ${FOLDER_TEST23116PHP_SERV}
+#    environment:
+#      - PHPGROUP=www-data
+#      - PHPUSER=www-data
+#      - FOLDER=${FOLDER_TEST23116PHP_SERV}
+#    restart: unless-stopped
+#    expose:
+#      - 9000
+#    volumes:
+#      - '${FOLDER_TEST23116PHP}:${FOLDER_TEST23116PHP_SERV}'
