--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,7 +24,7 @@ services:
       - './caddy/Caddyfile:/etc/caddy/Caddyfile'
       - './caddy/config:/config/caddy/'
       - './caddy/certs:/data/caddy/locks/'
-      - './caddy/certs3:/data/caddy/certificates/'
+#      - './caddy/certs3:/data/caddy/certificates/'
 
 #      - '${FOLDER_2308BEGET}:/2308beget'
 #      - '${FOLDER_2309LARAWIRE}:/2309livewire'
